test/ui/test/name-resolution/circular-with-transitive-uses.lushui
;;; TEST fail check

use indirect.thing
module indirect of { @public use super.thing }

use alpha.alpha

use omega.omega as bridge
use bridge as omega

use cycle
use cycle as trans0
use trans0 as trans1

;;; @Task add description, add more "transitive uses of cycles"
;;; (as far as I can see only the last group contains some), draw ASCII art
